--- a/C0519_DuyTan/Calculator.html
+++ b/C0519_DuyTan/Calculator.html
@@ -1,44 +1,45 @@
 <!DOCTYPE html>
+
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Calculator</title>
     <style>
-        form{
-            border: 1px solid blue;
-            border-radius: 10px;
-            background-color: greenyellow;
-            margin: 10px 50px;
-            padding: 10px 300px;
-            /*align-content: center;*/
+        .center{
+            background-color: green;
+            margin: 30px auto;
+            padding: 10px;
+            width: 500px;
+            text-align: center;
+            border: black solid 1px;
+            border-radius: 8px;
+        }
+        input{
+            text-align: center;
+            border: 1px gray solid;
+            border-radius: 3px;
         }
         input[type=submit]{
-            color: white;
-            background-color: #4CAF50;
-            border-radius: 4px;
-            border: 1px solid black;
             cursor: pointer;
-            margin: 5px 5px;
-            height: 25px;
-            align-content: center;
-        }
-        input[type=number]{
-            width=80;
+            /*background-color: gray;*/
         }
     </style>
 </head>
 <body>
-    <form>
-        <input type="number">
-        <input type="number">
-        <br>
-        <input type="submit" value="Addition(+)">
 
-        <input type="submit" value="Subtraction(-)">
-
-        <input type="submit" value="Multiplication(*)">
-
-        <input type="submit" value="Division(/)">
-    </form>
+    <div class="center">
+        <h1>Caculator</h1>
+        <form>
+            <input type="number" placeholder="Nhập giá trị thứ nhất">
+            <input type="number" placeholder="Nhập giá trị thứ hai">
+            <br>
+            <br>
+            <input type="submit" value="Addition(+)" onclick="alert('Ket qua phep tinh: ');">
+            <input type="submit" value="Subtraction(-)" onclick="alert('Ket qua phep tinh: ');">
+            <input type="submit" value="Multiplication(*)" onclick="alert('Ket qua phep tinh: ');">
+            <input type="submit" value="Division(/)" onclick="alert('Ket qua phep tinh: ');">
+        </form>
+    </div>
 </body>
 </html>
