--- a/c0519 dohuunghia/tiente/tiente2.html
+++ b/c0519 dohuunghia/tiente/tiente2.html
@@ -20,10 +20,12 @@
                 <option value="1">VND</option>
                 <option value="16000">AUD</option>
                 <option value="23000">USD</option>
+                <option value="26000">EUR</option>
             </select>
         </th>
         <th>
             <select id="cot3">
+                <option value="26000">EUR</option>
                 <option value="23000">USD</option>
                 <option value="16000">AUD</option>
                 <option value="1">VND</option>
