--- a/c0519 dohuunghia/Season2/caculator/Caculator1.html
+++ b/c0519 dohuunghia/Season2/caculator/Caculator1.html
@@ -34,7 +34,7 @@
             <button value = "4" onclick = "ketqua.value += this.value"> 4 </button>
             <button value = "5" onclick = "ketqua.value += this.value"> 5 </button>
             <button value = "6" onclick = "ketqua.value += this.value"> 6 </button>
-            <button value = "C" onclick = "ketqua.value += this.value"> C </button>
+            <button value = "C" onclick = "ketqua.value = ketqua.value.substr(0, ketqua.value.length - 1)"> C </button>
         </th>
     </tr>
     <tr>
